# ibmi

./: .gitignore  README.md  next_steps.md  system_definitions.md
backend/: .env.example  Dockerfile  alembic.ini  backend.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260317_221334_initial_schema.py  20260329_000000_add_refresh_tokens.py  20260331_000000_add_soft_delete.py
backend/app/: __init__.py  main.py
backend/app/agenda_escalas/: __init__.py  api.py
backend/app/agenda_escalas/models/: __init__.py  agenda.py
backend/app/agenda_escalas/repositories/: __init__.py
backend/app/agenda_escalas/schemas/: __init__.py  agenda.py
backend/app/agenda_escalas/services/: __init__.py  agenda_service.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/auth/: __init__.py  api.py
backend/app/auth/models/: __init__.py  refresh_token.py  usuario.py
backend/app/auth/schemas/: __init__.py  auth.py
backend/app/auth/services/: __init__.py  auth_service.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/estrutura_eclesiastica/: __init__.py  api.py
backend/app/pessoas_ministerios/: __init__.py  api.py
backend/app/relatorios_historico/: __init__.py  api.py
backend/app/shared/: all_models.py  mixins.py
backend/postman/: IBMI_Backend.postman_collection.json
backend/scripts/: create_admin.py
backend/tests/: __init__.py  conftest.py  test_bloco3.py  test_estrutura_eclesiastica.py
(+16 files in other folders)
